# CPP-Deep-Learning-Neural-Network-Framework

./: README.md
.github/workflows/: benchmark.yml  ci.yml
CPP_Neural_Network_Base/: README.md  codebase basic.hpp  splitter.py
CPP_Neural_Network_Base/examples/: run_all.cpp
CPP_Neural_Network_Base/include/nexus/: config.hpp
CPP_Neural_Network_Base/include/nexus/core/: arena.hpp  error.hpp  tensor.hpp
CPP_Neural_Network_Base/include/nexus/math/: gemm.hpp  kernels.hpp
CPP_Neural_Network_Base/include/nexus/nn/: layers.hpp  losses.hpp  network.hpp
CPP_Neural_Network_Base/include/nexus/utils/: timer.hpp
CPP_Neural_Network_Base/scripts/: build.sh
CPP_Neural_Network_Base/tests/: test_arena.hpp
CPP_Neural_Network_Main/: CMakeLists.txt  Project_Structure.txt  README.md  codebase.hpp  splitter.py
CPP_Neural_Network_Main/examples/: run_all.cpp
CPP_Neural_Network_Main/include/nexus/: config.hpp
CPP_Neural_Network_Main/include/nexus/core/: arena.hpp  error.hpp  tensor.hpp
CPP_Neural_Network_Main/include/nexus/math/: gemm.hpp  kernels.hpp
CPP_Neural_Network_Main/include/nexus/nn/: layers.hpp  losses.hpp  network.hpp
CPP_Neural_Network_Main/include/nexus/utils/: timer.hpp
CPP_Neural_Network_Main/tests/: test_gemm.hpp
